[workspace]
resolver = "2"
members = ["packages/project-meta", "packages/jschema-configs"]
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
anyhow = "1.0"
thiserror = "1.0"
confique = { version = "0.1", features = ["toml"] }
insta = { version = "1.41.1", features = ["yaml", "redactions"] }
typify = { path = "../typify/typify" }
schemars = "0.8.21"
syn = "2"
prettyplease = "0.2"
regress = "0.10"
