[workspace]
resolver = "2"
members = ["packages/project-meta", "packages/jschema-configs"]
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
confique = { version = "0.3", features = ["toml"] }
insta = { version = "1.41.1", features = ["yaml", "redactions"] }
typify = { path = "../typify/typify" }
schemars = "0.8.21"
syn = "2"
prettyplease = "0.2"
regress = "0.10"
cargo_toml = "0.21"
document-features = "0.2"
